--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-redux": "^8.0.5",
     "rxjs": "^7.8.0",
     "styled-components": "^5.3.9",
     "yup": "^1.0.2"
